k3s/forgejo/forgejo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
spec:
  type: NodePort
  selector:
    app: forgejo
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    nodePort: 30000
  - name: ssh
    port: 22
    targetPort: 22
    nodePort: 30222
