k3s/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: forgejo
  name: forgejo
  namespace: forgejo
spec:
  ports:
  - name: forgejo-http
    port: 80
    protocol: TCP
    targetPort: 3000
  - name: forgejo-ssh
    port: 222
    protocol: TCP
    targetPort: 222
  selector:
    app: forgejo
  loadBalancerIP: 192.168.0.201
