k3s/forgejo/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-ingress
  namespace: forgejo
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`forgejo.lan`)
    kind: Rule
    services:
    - name: forgejo
      port: 80
